--- a/ps2/pset2_solution_template.tex
+++ b/ps2/pset2_solution_template.tex
@@ -46,7 +46,7 @@
 \newcommand{\tab}{\hspace*{\tabUnit}}
 
 \newcommand{\yourname}{Kevin Peng}
-\newcommand{\yourcollaborators}{}
+\newcommand{\yourcollaborators}{Genghis Chau, Jodie Chen, Xubo Sun}
 
 \begin{document}
 
